--- a/meteor/client/modules/core/views/includes/header-img.include.ng.html
+++ b/meteor/client/modules/core/views/includes/header-img.include.ng.html
@@ -1,4 +1,4 @@
-<div class="header-card md-padding" >
+<div class="header-card md-padding hidden" >
   <h1 class="page-header" ng-bind="page.title"> </h1>
   <ncy-breadcrumb ncy-breadcrumb-text-separator=' > '></ncy-breadcrumb>
 </div>
