--- a/meteor/client/modules/menu/views/includes/sidebar.ng.html
+++ b/meteor/client/modules/menu/views/includes/sidebar.ng.html
@@ -1,4 +1,4 @@
-<md-sidenav flex layout="column" class="md-sidenav-left md-whiteframe-z1" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+<md-sidenav flex layout="column" class="md-sidenav-left md-whiteframe-z1 hidden" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
   <div role="navigation" layout="column" flex>
     <!-- PROFILE CARD -->
     <div ng-include="'client/modules/menu/views/includes/profile_card.ng.html'"></div>
